# environment-configuration-diary

./: README.md
1-Lipschitz-Neural-Distance-Fields-Ubuntu20.04.6/: README.md
4-Rosy-Complex-Poly/: README.md
ALGLIB/: README.md
BRep Reconstruction/: README.md
BRep Reconstruction/Geometric Tools Engine/: README.md
BRep Reconstruction/ParseNet+SED_Net/: README.md
BRep-Reconstruction/: README.md
Boost/: README.md
CGAL/: README.md
CMake/: README.md
Computational Fluid Dynamics (CFD)/: README.md
Computational Fluid Dynamics (CFD)/CGNS/: README.md
Computational Fluid Dynamics (CFD)/OpenFOAM/: README.md
Computational-Fluid-Dynamics/: README.md
Computational-Fluid-Dynamics/CGNS-macOS-15.3/: README.md
Computational-Fluid-Dynamics/OpenFOAM/: README.md
Computational-Fluid-Dynamics/OpenFOAM-macOS-15.3/: README.md
Directional/: README.md  dot_row.cpp  dot_row.h
DirectionalFieldSynthesis/: README.md
Eigen/: README.md
Feature-Preserving-Octree-Hex-Meshing/: README.md
Gmsh/: README.md
High-Order-Meshing/HOHQMesh/: README.md
Instant-Meshes/: README.md
Libtorch/: README.md
MCS/: README.md
MetricDrivenFrame3D/: README.md
Minpack/: README.md
NH-Rep/: README.md
NeurField/1-Lipschitz-Neural-Distance-Fields-Ubuntu20.04.6/: README.md
NeurField/IGR/: README.md
NeurField/IGR-Ubuntu20.04.6/: README.md  environment.yml
Open CASCADE Technology/: README.md
Open CASCADE Technology/OCCT-Windows-10(11)/: CMakeLists.txt  README.md
Open-CASCADE-Technology/: README.md
OpenFOAM/: README.md
OpenMP/: README.md
OpenMPI/: README.md
OpenMesh/: README.md
PCL/: README.md
PETSc/: README.md
ParseNet+SED_Net/: environment.yml
Point2CAD/: README.md
Practical-3D-Frame-Field-Generation/: README.md
QGP3D/: README.md
QuadMixer/: README.md
QuadQS/: HLPW-4_CRM-HL_far-field_v2.stp  README.md
QuadWild/: README.md
QuadriFlow/: README.md
TBB/: README.md
TetWild/: README.md
VMAS/: README.md
clash-for-linux/: README.md
fTetwild/: README.md
gmp/: README.md
hybrid-quad/: README.md
libQEx/: README.md
nPV/: README.md
proxyForTheServer/: README.md
siren/: environment.yml
(+98 files in other folders)
